# mandelbrot

./: .gitignore  CMakeLists.txt  README.md  build.c  fractal.c  main.c  mandel.py
